@@ -2,7 +2,8 @@
 *** denotes really big changes 
 
 Problems: prediction with lpi overlap, and identification between base 
-and shared components
+and shared components - these are linked as dropped params have to be 
+dealt with somehow...
 
 1.8-6
 
